--- a/images/jenkins-master/Dockerfile
+++ b/images/jenkins-master/Dockerfile
@@ -41,4 +41,19 @@ COPY jobs/devbuild.xml /usr/share/jenkins/ref/jobs/devbuilds/jobs/devbuild/confi
 # Install initial job to build WRLinux
 COPY jobs/WRLinux_Build.xml /usr/share/jenkins/ref/jobs/WRLinux_Build/config.xml
 
+# Install initial job to start Walter
+COPY jobs/Walter.xml /usr/share/jenkins/ref/jobs/Walter/config.xml
+
+# Install initial job for build logins
+COPY jobs/Login.xml /usr/share/jenkins/ref/jobs/Login/config.xml
+
 RUN echo 2.5 > /usr/share/jenkins/ref/jenkins.install.UpgradeWizard.state
+
+USER root
+
+RUN mkdir /license-report  && cd /license-report \
+    && curl --silent --remote-name https://raw.githubusercontent.com/WindRiver-OpenSourceLabs/license-report/master/generate_report.sh \
+    && apk update && sh generate_report.sh > report \
+    && rm -rf /var/cache/apk/* && rm /license-report/generate_report.sh
+
+USER jenkins
