--- a/wrl-ci.yaml
+++ b/wrl-ci.yaml
@@ -33,7 +33,7 @@ services:
       JENKINS_OPTS: '--httpPort=8080 --httpListenAddress=0.0.0.0 --prefix=/jenkins'
       JENKINS_UI_URL: "https://$HOST/jenkins/"
       JENKINS_AGENT_PASSWORD: "${JENKINS_AGENT_PASSWORD}"
-      JENKINS_MASTER_NUM_EXECUTORS: "${JENKINS_MASTER_NUM_EXECUTORS:-0}"
+      JENKINS_MASTER_NUM_EXECUTORS: "${JENKINS_MASTER_NUM_EXECUTORS:-1}"
       JENKINS_INIT_DEBUG: "${JENKINS_INIT_DEBUG}"
     deploy:
       replicas: 1
@@ -85,7 +85,7 @@ services:
       # Volume avoids recreating certs on every run
       - rproxy_nginx_config:/etc/nginx/keys
       # expose the rsync server contents over https
-      - /opt/rsync/builds:/var/lib/nginx/html/builds/:ro
+      - rsync_builds:/var/lib/nginx/html/builds/:ro
       # expose the jenkins auth content over https
       - jenkins_home:/var/lib/nginx/html/jenkins_home/:ro
 
@@ -116,7 +116,7 @@ services:
       - agent_password
 
   consul:
-    image: consul:${CONSUL_TAG:-1.2.0}
+    image: consul:${CONSUL_TAG:-1.5.0}
     deploy:
       replicas: 1
       placement:
@@ -125,7 +125,7 @@ services:
     environment:
       CONSUL_LOCAL_CONFIG: '{"disable_update_check": true}'
       CONSUL_BIND_INTERFACE: "eth0"
-    command: "consul agent -server -bootstrap-expect=1 -data-dir=/tmp/consuldata -config-dir=/consul/config -client=0.0.0.0"
+    command: "consul agent -server -bootstrap-expect=1 -data-dir=/tmp/consuldata -config-dir=/consul/config -client=0.0.0.0 -bind '{{ GetInterfaceIP \"eth0\" }}'"
     networks:
       - net
     volumes:
@@ -133,8 +133,17 @@ services:
         target: /tmp
 
   registrator:
-    image: gliderlabs/registrator:latest
-    command: -ip=$HOSTIP consul://consul:8500
+    image: gliderlabs/registrator:master
+    entrypoint:
+      - sh
+      - -c
+      # Registrator requires the host machine IP be passed to it to allow consul perform a successful healthcheck.
+      # Currently there is no simple way to obtain host IP from within a docker container running in Linux so nslookup
+      # is used instead to obtain the host IP by DNS query.
+      # Docker automatically injects ndots:0 to /etc/resolv.conf, this prevented the resolver from searching domains
+      # of format *.wrs.com and nslooup cannot function. So first ndots:0 is replaced with ndots:15 in /etc/resolv.conf
+      # file. Then nslookup is used to extract IP address of host machine and feed it to registrator
+      - sed 's/ndots:0/ndots:15/' /etc/resolv.conf > /etc/resolv.conf.tmp && cat /etc/resolv.conf.tmp > /etc/resolv.conf && rm /etc/resolv.conf.tmp && cat /etc/hostname | xargs nslookup 2>/dev/null | tail -n 1 | cut -d ' ' -f 3 | xargs -I {} registrator -ip {} consul://consul:8500
     deploy:
       mode: global
       placement:
