Add LAVA native qemu device for WRLinux9, Remove reporting to REPORT_SERVER
Signed-off-by: Ubuntu <ubuntu@ip-172-31-54-55.us-west-2.compute.internal>

--- a/configs/WRLinux9/test_configs.yaml
+++ b/configs/WRLinux9/test_configs.yaml
@@ -60,3 +60,6 @@
   qemu-x86_64:
     job_template: lava-test/jobs/templates/wrlinux-10/x86_64_qemu_job_lava-smoke-test_template.yaml
     timeout: 300
+  qemu:
+    job_template: lava-test/jobs/templates/wrlinux-10/x86_64_qemu_job_linaro-smoke-test_template.json
+    timeout: 300
